--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/sw-lib-fonts"]
-	path = libs/sw-lib-fonts
+[submodule "libs/sw-lib-font"]
+	path = libs/sw-lib-font
 	url = git@github.com:Bridiro/sw-lib-font.git
