update: changed sw-lib-font to sw-libfont to follow naming standards

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/sw-lib-font"]
-	path = libs/sw-lib-font
-	url = git@github.com:Bridiro/sw-lib-font.git
+[submodule "libs/sw-libfont"]
+	path = libs/sw-libfont
+	url = git@github.com:Bridiro/sw-libfont.git
